2007-03-15  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/news.texi: pushed release date

2007-03-12  Brian Bidulock  <bidulock@openss7.org>

	* am/openss7.am: bump automake requirement to 1.9 from 1.8

2007-03-07  Brian Bidulock  <bidulock@openss7.org>

	* scripts/remove_initd: was not removing rc6.d links
	* scripts/strconf-sh: also alias driver to object names in modules.conf
	* m4/autotest.m4: use proper AC_PATH_PROG, AC_PATH_TARGET_TOOL, AC_PATH_TOOL
	* m4/deb.m4: use proper AC_PATH_PROG, AC_PATH_TARGET_TOOL, AC_PATH_TOOL
	* m4/doxy.m4: use proper AC_PATH_PROG, AC_PATH_TARGET_TOOL, AC_PATH_TOOL
	* m4/genksyms.m4: use proper AC_PATH_PROG, AC_PATH_TARGET_TOOL, AC_PATH_TOOL
	* m4/init.m4: use proper AC_PATH_PROG, AC_PATH_TARGET_TOOL, AC_PATH_TOOL
	* m4/kernel.m4: use proper AC_PATH_PROG, AC_PATH_TARGET_TOOL, AC_PATH_TOOL
	* m4/libraries.m4: use proper AC_PATH_PROG, AC_PATH_TARGET_TOOL, AC_PATH_TOOL
	* m4/man.m4: use proper AC_PATH_PROG, AC_PATH_TARGET_TOOL, AC_PATH_TOOL
	* m4/openss7.m4: use proper AC_PATH_PROG, AC_PATH_TARGET_TOOL, AC_PATH_TOOL
	* m4/rpm.m4: use proper AC_PATH_PROG, AC_PATH_TARGET_TOOL, AC_PATH_TOOL

	* texi/install.texi: added locations on website of tools to README-cvs
	* scripts/strconf-sh: clone device by name instead of number

2007-03-06  Brian Bidulock  <bidulock@openss7.org>

	* m4/kernel.m4: add options for kernel source package
	* m4/kernel.m4 (linux_cv_k_modver): cache check variable correction
	* m4/chan.m4: build directory might not exist yet for master builds
	* m4/inet.m4: build directory might not exist yet for master builds
	* m4/isdn.m4: build directory might not exist yet for master builds
	* m4/iso.m4: build directory might not exist yet for master builds
	* m4/nsl.m4: build directory might not exist yet for master builds
	* m4/sctp.m4: build directory might not exist yet for master builds
	* m4/sock.m4: build directory might not exist yet for master builds